@@ -8,12 +8,13 @@ import net.bytebuddy.matcher.ElementMatchers;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-public class Task1 {
+public class Task1Test {
     private static final String MESSAGE = "Hello, ByteBuddy!";
 
     @Test
-    void helloByteBuddyTest() throws InstantiationException, IllegalAccessException, InvocationTargetException {
-        //Act
+    void helloByteBuddyTest()
+        throws InstantiationException, IllegalAccessException, InvocationTargetException, NoSuchMethodException {
+        //Arrange
         try (DynamicType.Unloaded<Object> unloadedType = new ByteBuddy()
             .subclass(Object.class)
             .method(ElementMatchers.isToString())
@@ -24,7 +25,8 @@ public class Task1 {
                 .load(getClass().getClassLoader())
                 .getLoaded();
 
-            var obj = dynamicType.getDeclaredConstructors()[0].newInstance();
+            //Act
+            var obj = dynamicType.getDeclaredConstructor().newInstance();
 
             //Assert
             Assertions.assertEquals(MESSAGE, obj.toString());
